syntax = "proto3";

package amplifycentral.datamodel;

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

option java_package = "com.axway.apicentral.datamodel.proto";
option java_outer_classname = "Model";
option go_package = "github.com/Axway/agent-sdk/pkg/axway/apicentral/datamodel/proto";

// Read-only metadata for the record.
message AuditMetadata {
    // The creation time.
    string createTimestamp = 1;

    // Id of the user that created the entity.
    string createUserId = 2;

    // The last modification time.
    string modifyTimestamp = 3;

    // Id of the user that last modified the entity.
    string modifyUserId = 4;
}

// Finalizer on the API server resource.
message Finalizer {
    string description = 1;
    string name = 2;
}

// Metadata that all server resources have. Data is generated by the server.
message Metadata {
    message ScopeMessage {
        // Internal id of the scope resource where the resource is defined.
        string id = 1;

        // The kind of the scope resource where the resource is defined.
        string kind = 2;

        // The name of the scope where the resource is defined.
        string name = 3;

        // Owner of the scope
        Owner owner = 4;

        // The URL to access the scope resource.
        string selfLink = 5;
    }

    // Audit info
    AuditMetadata audit = 1;

    // Internal id of the resource.
    string id = 2;

    // resource references
    repeated Reference references = 3;

    // Internal version of this object that can be used by clients to determine when objects have changed.
    string resourceVersion = 4;

    // The scope where this resource was defined.
    ScopeMessage scope = 5;

    // The URL representing this resource object.
    string selfLink = 6;

    // Defines the state of the resource. If present, indicates if the resource is in Deleting state.
    string state = 7;
}

// Owner of the resource.
message Owner {
    enum Type {
        TEAM = 0;
    }

    // Id of the owner of the resource.
    string id = 1;

    // The type of the owner. Defaults to team if not present.
    Type type = 2;
}

// Reference resource
message Reference {
    enum Type {
        SOFT = 0;
        HARD = 1;
    }

    // Unique id generated by the server.
    string id = 1;

    // The kind of the referenced resource.
    string kind = 2;

    // The name of the referenced resource.
    string name = 3;

    // The kind of the referenced resource scope.
    google.protobuf.StringValue scopeKind = 4;

    // The name of the referenced resource scope.
    google.protobuf.StringValue scopeName = 5;

    // The URL representing the referenced resource.
    string selfLink = 6;

    // Defines the type of the reference: * soft - spec property that has this reference will get nulled out if the referenced resource gets removed. * hard - dictates that the current resource will get removed when the referenced resource gets removed.
    Type type = 7;
}

// API Server generic resource structure.
message ResourceInstance {

    // Defines the group from which the resource belongs to. The server infers this from the endpoint the client submits the request to.
    string group = 1;

    // Resource kind
    string kind = 2;

    // Defines the structure of the resource. The server infers this from the endpoint the client submits the request to.
    google.protobuf.StringValue apiVersion = 3;

    // Name of the resource
    string name = 4;

    // Friendly name of the resource
    string title = 5;

    // Metadata.
    Metadata metadata = 6;

    // Resource attributes
    map<string, string> attributes = 7;

    // List of tags.
    repeated string tags = 8;

    // Finalizers
    repeated Finalizer finalizers = 9;

    // Resource owner info
    Owner owner = 10;

    // Resource instance specs.
    .google.protobuf.Struct spec = 11;

    // sub resources
    map<string, .google.protobuf.Struct> subResources = 12;
}